--- a/Organizer/Organizer.csproj
+++ b/Organizer/Organizer.csproj
@@ -9,7 +9,6 @@
   </PropertyGroup>
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
-    <Folder Include="Services\" />
     <None Remove=".gitignore" />
   </ItemGroup>
   <ItemGroup>
@@ -25,6 +24,8 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.12" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
+    <PackageReference Include="Citrus.Avalonia" Version="1.6.1" />
+    <PackageReference Include="Prism.Core" Version="8.1.97" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
 </Project>
