--- a/Organizer/Organizer.csproj
+++ b/Organizer/Organizer.csproj
@@ -25,7 +25,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.12" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
     <PackageReference Include="Citrus.Avalonia" Version="1.6.1" />
-    <PackageReference Include="OxyPlot.Avalonia-alpha-2020-04-15" Version="1.0.0" />
+    <PackageReference Include="OxyPlot.Avalonia" Version="2.1.0-Preview1" />
     <PackageReference Include="Prism.Core" Version="8.1.97" />
     <PackageReference Include="Splat.DryIoc" Version="14.2.8" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
