--- a/Organizer/Organizer.csproj
+++ b/Organizer/Organizer.csproj
@@ -19,14 +19,16 @@
     <TrimmableAssembly Include="Avalonia.Themes.Default" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.10.12" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.10.12" />
+    <PackageReference Include="Avalonia" Version="0.10.15" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.15" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.12" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.15" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.15" />
     <PackageReference Include="Citrus.Avalonia" Version="1.6.1" />
     <PackageReference Include="OxyPlot.Avalonia" Version="2.1.0-Preview1" />
     <PackageReference Include="Prism.Core" Version="8.1.97" />
+    <PackageReference Include="ScottPlot" Version="4.1.48" />
+    <PackageReference Include="ScottPlot.Avalonia" Version="4.1.48" />
     <PackageReference Include="Splat.DryIoc" Version="14.2.8" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
